# nv_ar_maya

./: .gitignore  ARSDKtest.bat  AR_maya_bodyTracking_video.bat  AR_maya_bodyTracking_webcam.bat  AR_maya_sample.bat  CMakeLists.txt  README.md
maya/: AR_SDK_skeleton.ma  AR_SDK_skeleton.mb
modules/: FindARSDK.cmake  FindEigen.cmake  FindMaya.cmake
projects/: CMakeLists.txt
projects/AR_maya_bodyTracking/: CMakeLists.txt
projects/AR_maya_bodyTracking/src/: BodyTracking.cpp  BodyTracking.h  main.cpp  mayaConnection.cpp  mayaInitCmd.py
projects/AR_maya_sample/: CMakeLists.txt
projects/AR_maya_sample/src/: main.cpp  mayaConnection.cpp  mayaConnection.h  mayaInitCmd.mel  socket.h
projects/AR_sample_body/: CMakeLists.txt
projects/AR_sample_body/src/: BodyTrack.cpp
